tests/backend/checkmach/fail18.output
File "fail18.ml", line 3, characters 5-15:
Error: Annotation check for zero_alloc failed on function Fail18.f (camlFail18__f_HIDE_STAMP)
